# textanalysis

./: .gitignore  CMakeLists.txt  README.md  example_filter.txt  test.txt
examples/input/: bacon_ipsum.txt  kafka.txt  lorem_ipsum.txt  random_english.txt  slothman.txt
examples/input/the_egg/: the_egg_czech.txt  the_egg_english.txt  the_egg_spanish.txt
src/: analyzer.cpp  analyzer.h  analyzer.hpp  cmdline.cpp  cmdline.hpp  main.cpp  statistics.cpp  statistics.h  statistics.hpp  word_cloud.cpp  word_cloud.hpp
test/: example.txt
